--- a/myntra.html
+++ b/myntra.html
@@ -34,7 +34,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="inner-floating-div-2">
+                <div class="inner-floating-div-2" id="ifdm1">
                     <div>
                         <h4>Bottomwear</h4>
                         <p>
@@ -64,7 +64,7 @@
                         <h4>Watches</h4>
                     </div>
                 </div>
-                <div class="inner-floating-div-2">
+                <div class="inner-floating-div-2" id="ifdm2">
                     <div>
                         <h4>Sports & Active Wear</h4>
                         <p>
@@ -111,7 +111,7 @@
                         <h4>Watches & Wearables</h4>
                     </div>
                 </div>
-                <div class="inner-floating-div-2">
+                <div class="inner-floating-div-2" id="ifdw1">
                     <div>
                         <h4>Western Wear</h4>
                         <p>
@@ -139,7 +139,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="inner-floating-div-2">
+                <div class="inner-floating-div-2" id="ifdw2">
                     <div>
                         <h4>Lingerie & Sleepwear</h4>
                         <p>
@@ -188,7 +188,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="inner-floating-div-2">
+                <div class="inner-floating-div-2" id="ifdk1">
                     <div>
                         <h4>Girls Clothing</h4>
                         <p>
@@ -212,7 +212,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="inner-floating-div-2">
+                <div class="inner-floating-div-2" id="ifdk2">
                     <div>
                         <h4>Infants</h4>
                         <p>
@@ -261,7 +261,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="inner-floating-div-2">
+                <div class="inner-floating-div-2" id="ifdhl1">
                     <div>
                         <h4>Bath</h4>
                         <p>
@@ -289,7 +289,7 @@
                         <h4>Curtains</h4>
                     </div>
                 </div>
-                <div class="inner-floating-div-2">
+                <div class="inner-floating-div-2" id="ifdhl2">
                     <div>
                         <h4>Home Gift Sets</h4>
                         <h4>Kitchen & Table</h4>
@@ -329,7 +329,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="inner-floating-div-2">
+                <div class="inner-floating-div-2" id="ifdb1">
                     <div>
                         <h4>Skincare, Bath & Body</h4>
                         <p>
@@ -356,7 +356,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="inner-floating-div-2">
+                <div class="inner-floating-div-2" id="ifdb2">
                     <div>
                         <h4>Appliances</h4>
                         <p>
